# python_course_repo

./: main.py
python_core/hw_03/: task_1.py  task_3.py  task_4.py
python_core/hw_04/: task_1.py  task_2.py  task_3.py
python_core/hw_04/consol_bot(task_4)/: main.py
python_core/hw_04/consol_bot(task_4)/proccesing_function/: user_command.py
python_core/hw_04/task_3/: main.py  requirements.txt
python_core/hw_05/: task_1.py  task_2.py  task_3.py
python_core/hw_06/: classes_file.py
python_core/hw_07/: dockerfile  main.py  pyproject.toml
python_core/hw_07/proccesing_function/: user_command.py
python_core/hw_1/: task_1.py  task_2.py
python_web/hw_01/: task_2.py
python_web/hw_02/: task_2.py
python_web/hw_03/: task_1.py  task_2.py
python_web/hw_04/front-init/: main.py
python_web/hw_04/front-init/storage/: data.json
python_web/hw_05/: main.py
python_web/hw_06/: create_db.py  fill_data.py  select_1.py  select_10.py  select_2.py  select_3.py  select_4.py  select_5.py  select_6.py  select_7.py  select_8.py  select_9.py  tables.db  tables.sql
python_web/hw_07/: models.py  my_select.py  mynotes.db  pyproject.toml  seeds.py
python_web/hw_07/alembic/versions/: 938677f7282c_init.py
python_web/hw_08/task_1/: config.ini  connect.py  models.py  search.py  seeds.py
python_web/hw_08/task_2/: consumer.py  model.py  producer.py
